Hotfix for resource release problem