@@ -9,15 +9,14 @@
 
 package com.sos.os;
 
+import java.util.ArrayList;
 import java.util.LinkedList;
 
 public class BasicProcessScheduler implements ProcessScheduler{
-    private final LinkedList<SimProcessInfo> process_queue;
-    private int currentIdx;
+    private final ArrayList<SimProcessInfo> process_queue;
 
     public BasicProcessScheduler(){
-        process_queue = new LinkedList<>();
-        currentIdx = 0;
+        process_queue = new ArrayList<>();
     }
 
 
@@ -28,11 +27,11 @@ public class BasicProcessScheduler implements ProcessScheduler{
 
     @Override
     public int getNextProcess() {
-        while(process_queue.size() > 0 && process_queue.peek().getState() == SimProcessState.TERMINATED)
-            process_queue.removeFirst();
+        while(process_queue.size() > 0 && process_queue.get(0).getState() == SimProcessState.TERMINATED)
+            process_queue.remove(0);
         if(process_queue.size() == 0)return -1;
-        SimProcessInfo info = process_queue.removeFirst();
-        process_queue.push(info);
+        SimProcessInfo info = process_queue.remove(0);
+        process_queue.add(info);
         return info.getPid();
     }
 }
